--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,31 +1,36 @@
 label {
-    color: rgba(0, 0, 0, 0.6);
-    font-size: 0.9rem;
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 0.9rem;
 }
 
 #root {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  background: #f5f5f5;
 }
 
 .stat-cont {
-    display: flex;
-    gap: 1.5rem;
-    width: 100%;
+  display: flex;
+  gap: 1.5rem;
+  width: 100%;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .stat-value {
-    min-width: 50%;
-    display: flex;
-    justify-content: flex-end;
-    font-size: 2rem;
+  min-width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 2rem;
 }
 
 .stat-name {
-    display: flex;
-    align-items: flex-end;
-    padding-bottom: 0.3rem;
+  display: flex;
+  align-items: flex-end;
+  padding-bottom: 0.3rem;
 }
